# FemSolver

./: .gitignore  CMakeLists.txt  FemSolver.cpp  FemSolver.h  README.md  fix_summary.md  summary.txt
include/: EllipticApp.h  EllipticFEMSolver.h  ExportManager.h  FemSolver.h  FunctionParser.h  GUIApp.h  GUIAppTypes.h  GdiVisualizer.h  IVisualizer.h  Localization.h  MeshGenerator.h  PresetManager.h  ReportGenerator.h  ResetManager.h  SolutionManager.h  StringUtils.h  Types.h  VisualizationFactory.h  VisualizationManager.h  Visualizer.h  WindowEventHandler.h
include/rendering/: DirectXRenderer.h  DirectXVisualizer.h
src/: EllipticApp.cpp  EllipticFEMSolver.cpp  ExportManager.cpp  FemSolver.cpp  FunctionParser.cpp  GUIApp.cpp  GdiVisualizer.cpp  Localization.cpp  MeshGenerator.cpp  PresetManager.cpp  ReportGenerator.cpp  ResetManager.cpp  SolutionManager.cpp  VisualizationFactory.cpp  VisualizationManager.cpp  Visualizer.cpp  WindowEventHandler.cpp
src/rendering/: DirectXRenderer.cpp  DirectXVisualizer.cpp
